# sojas-api

./: .gitignore  Cargo.toml
database/: migration.sql  seed.sql
migrations/: migration.sql
scripts/: create_db.sh  demo.rs  init.sql
src/: events.rs  jwt.rs  lib.rs  main.rs  pinkpolitiek_api.rs  schema.rs  users.rs
