[package]
name = "sqlx_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
diesel = { version = "2.0.3", features = ["mysql", "r2d2"] }
serde = { version = "1.0.150", features = ["derive"] }

[package.metadata.scripts]
env = "echo && echo 'set DATABASE_URL 'mysql://user:password@127.0.0.1:3306/sqlxdemo'' && echo"