[package]
name = "sojas-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
serde = { version = "1.0.150", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "mysql", "macros", "json"] }
futures = "0.3.25"
reqwest = { version = "0.11.16", features = ["json"] }
tokio = { version = "1.27.0", features = ["full"] }
serde_json = "1.0.96"
actix-cors = "0.6.4"

[package.metadata.scripts]
#env = "echo && echo 'set DATABASE_URL 'mysql://user:localhost@127.0.0.1:3306/sojas'' && echo"